upd endpoint path v1
