# main.py
@@ -21,16 +21,16 @@ async def get_healthcheck():
 
 
 # Возвращает список эндпоинтов сервиса
-@app.get('/help')
+@app.get('/v1/help')
 async def help_list():
     """Выводит список доступных команд."""
     return {
         'commands': [
-            {'method': 'POST', 'path': '/expenses/add', 'description': 'Добавить трату'},
-            {'method': 'GET', 'path': '/expenses/most_expensive_category/{date}', 'description': 'Самая затратная категория'},
-            {'method': 'GET', 'path': '/expenses/most_expensive_purchase/{category}/{date}',
+            {'method': 'POST', 'path': '/v1/expenses', 'description': 'Добавить трату'},
+            {'method': 'GET', 'path': '/v1/expenses/{date}', 'description': 'Самая затратная категория'},
+            {'method': 'GET', 'path': '/v1/expenses/{category}/{date}',
              'description': 'Самая дорогая покупка'},
-            {'method': 'GET', 'path': '/help', 'description': 'Справка по API'}
+            {'method': 'GET', 'path': '/v1/help', 'description': 'Справка по API'}
         ]
     }
 
@@ -44,7 +44,7 @@ class AddExpenseRequestModel(BaseModel):
 
 
 # Эндпоинт для добавления трат
-@app.post('/expenses/add')
+@app.post('/v1/expenses')
 async def add_expense(request: AddExpenseRequestModel, response: Response):
     """Добавляет новую трату."""
     success_code = budget.add_expense(
@@ -69,7 +69,7 @@ async def add_expense(request: AddExpenseRequestModel, response: Response):
 
 
 # Эедпоинт возвращает самую затратную категорию за указанную дату
-@app.get('/expenses/most_expensive_category/{date}')
+@app.get('/v1/expenses/{date}')
 async def most_expensive_category(date: str, response: Response):
     """Возвращает самую затратную категорию за указанную дату."""
     result = budget.get_the_most_expensive_category(date)
@@ -81,7 +81,7 @@ async def most_expensive_category(date: str, response: Response):
 
 
 # Эндпоинт возвращает самую дорогую попкупку в указанной категории за указанную дату
-@app.get('/expenses/most_expensive_purchase/{category}/{date}')
+@app.get('/v1/expenses/{category}/{date}')
 async def most_expensive_purchase(category: str, date: str, response: Response):
     """Возвращает самую дорогую покупку в категории за указанную дату."""
     result = budget.get_the_most_expensive_purchase(category, date)
